Added some cool stuff to test

--- a/index.qmd
+++ b/index.qmd
@@ -1,3 +1,61 @@
 ---
 title: New Home Page
+output: all
 ---
+
+
+```{ojs}
+P5 = require("p5")
+```
+
+```{ojs}
+function* createSketch(sketch) {
+  const element = DOM.element('div');
+  yield element;
+  const instance = new P5(sketch, element, true);
+  try {
+    while (true) {
+      yield element;
+    }
+  } finally {
+    instance.remove();
+  }
+}
+
+createSketch(s => {
+  
+    s.setup = function() {
+      s.createCanvas(500, 500);
+      s.background(0);
+      s.noStroke();
+    };
+    
+    s.draw = function() {
+      s.translate(
+        100 * s.cos(s.millis() * .001 * s.PI),
+        100 * s.sin(s.millis() * .001 * s.PI),
+      );
+      if (s.random(0, 1) < .1) {
+        s.fill(s.random(0, 255));
+      }
+      s.circle(250, 250, 100);
+    };
+    
+  }
+)
+```
+
+```{python}
+import plotly.graph_objects as go
+import pandas as pd
+# Read data from a csv
+z_data = pd.read_csv('https://raw.githubusercontent.com/plotly/datasets/master/api_docs/mt_bruno_elevation.csv')
+
+fig = go.Figure(data=[go.Surface(z=z_data.values)])
+
+fig.update_layout(title='Mt Bruno Elevation', autosize=False,
+                  width=500, height=500,
+                  margin=dict(l=65, r=50, b=65, t=90))
+
+fig.show()
+```
