Added attribution for p5 idea and modified p5 graphic. Pretty cool.

--- a/index.qmd
+++ b/index.qmd
@@ -2,7 +2,7 @@
 title: New Home Page
 output: all
 ---
-
+Credit: [Danielle Navarro](https://blog.djnavarro.net/posts/2023-01-14_p5js/)
 
 ```{ojs}
 P5 = require("p5")
@@ -23,26 +23,42 @@ function* createSketch(sketch) {
 }
 
 createSketch(s => {
-  
-    s.setup = function() {
-      s.createCanvas(500, 500);
-      s.background(0);
-      s.noStroke();
-    };
-    
-    s.draw = function() {
-      s.translate(
-        100 * s.cos(s.millis() * .001 * s.PI),
-        100 * s.sin(s.millis() * .001 * s.PI),
-      );
-      if (s.random(0, 1) < .1) {
-        s.fill(s.random(0, 255));
-      }
-      s.circle(250, 250, 100);
-    };
-    
+  // Use `s.` to access p5 functions within instance mode
+  s.setup = function() {
+    s.createCanvas(720, 400);
+  };
+
+  let t = 0;
+  s.draw = function() {
+    s.background('#fff');
+    s.translate(s.width / 2, s.height / 2);
+    s.stroke('#0f0f0f');
+    s.strokeWeight(1.5);
+    // Loop for adding 100 lines
+    for (let i = 0; i < 100; i++) {
+      s.line(x1(t + i), y1(t + i), x2(t + i) + 20, y2(t + i) + 20);
+    }
+    t += 0.15;
+  };
+
+  // Update these functions to use `s.sin` and `s.cos`
+  function x1(t) {
+    return s.sin(t / 10) * 125 + s.sin(t / 20) * 125 + s.sin(t / 30) * 125;
   }
-)
+
+  function y1(t) {
+    return s.cos(t / 10) * 125 + s.cos(t / 20) * 125 + s.cos(t / 30) * 125;
+  }
+
+  function x2(t) {
+    return s.sin(t / 15) * 125 + s.sin(t / 25) * 125 + s.sin(t / 35) * 125;
+  }
+
+  function y2(t) {
+    return s.cos(t / 15) * 125 + s.cos(t / 25) * 125 + s.cos(t / 35) * 125;
+  }
+});
+
 ```
 
 ```{python}
