trying to fix link

--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: Tyler Moseley: New Home Page
+title:  New Home Page
 ---
 
 # Explore and Engage: Discover the Enhanced Features of My Revamped Site
